--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 /*ON ALL PAGES*/
 
 body {
+    text-align: center;
 	font-family: "Fridge", Verdana, Tahoma;
 	background: url("Images/white-noise.jpg");
 }
@@ -18,15 +19,15 @@ Header {
 	height: 100%;
 }
 
-h1 .green {
+.green {
 	color: #9EE177;
 }
 
-h1 .pink {
+.pink {
 	color: #D785A9;
 }
 
-h1 .blue {
+.blue {
 	color: #72C6E0;
 }
 
@@ -122,6 +123,19 @@ h2 {
     width: 100%;
 }
 
+.CakeMonth {
+    display:inline-block;
+    text-align: center;
+    background-color:rgba(255,255,255,0.9);
+    font-size: 60px;
+    margin-top: 100px;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: -35px;
+    border-radius: 15px;
+    padding: 10px;
+}
+
 
 /*GET INVOLVED PAGE*/
 
@@ -171,15 +185,11 @@ h2 {
 
 .jcarousel-wrapper {
     margin: 20px auto;
-    margin-top: 100px;
     position: relative;
-    border: 10px solid #fff;
+    border: 10px solid rgba(255,255,255,0.9);
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
-    -webkit-box-shadow: 0 0 2px #999;
-    -moz-box-shadow: 0 0 2px #999;
-    box-shadow: 0 0 2px #999;
 }
 
 /** Carousel **/
