--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
 body {
     text-align: center;
 	font-family: "Fridge", Verdana, Tahoma;
-	background: url("Images/white-noise.jpg");
+	background: url("Images/metal.png");
 }
 
 @font-face {
@@ -18,6 +18,7 @@ Header {
 	text-align: center;
 	height: 100%;
 }
+
 
 .green {
 	color: #9EE177;
@@ -42,7 +43,7 @@ h1 {
 h2 {
 	text-decoration: underline;
 	margin-left: 10px;
-	margin-top: 100px;
+	margin-top: 20px;
 	text-align: left;
 	font-style: underline;
 }
@@ -141,6 +142,17 @@ h2 {
 
 .main {
 	text-align: center;
+    background-color: white;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+#forms {
+    background-color: white;
+}
+
+h4 {
+    background-color: white;
 }
 
 #Give-Form {
@@ -179,6 +191,47 @@ h2 {
 	color: white;
 }
 
+/*ABOUT PAGE*/
+
+.aboutus {
+    background-color: #D785A9;
+    font-size: 30px;
+    padding: 30px 80px 50px 80px;
+    text-align: center;
+    padding-bottom: 500em;
+    margin-bottom: -500em;
+}
+
+#press {}
+
+.search {
+    margin:10px auto;
+}
+
+h5 { background-color: skyblue;
+    padding-bottom: 5px;
+}
+
+
+
+.map {
+    background-color: #D785A9;
+    font-size: 20px;
+    text-align: center;
+    padding-bottom: 500em;
+    margin-bottom: -500em;
+}
+.contactus {
+    background-color: #9EE177;
+    font-size: 23px;
+    font-style: normal;
+    padding: 40px 60px 40px 70px;
+    text-align: center;
+    padding-bottom: 400em;
+    margin-bottom: -400em;
+}
+
+
 
 /*SLIDER*/
 
@@ -198,6 +251,8 @@ h2 {
     position: relative;
     overflow: hidden;
     width: 100%;
+    font-size: 30px;
+    font-style: italic;
 }
 
 .jcarousel ul {
