--- a/index.css
+++ b/index.css
@@ -247,6 +247,8 @@ h2 {
     font-size: 28px;
     padding: 40px 60px 40px 70px;
     text-align: center;
+    padding-bottom: 500em;
+    margin-bottom: -500em;
 }
 
 .press {
@@ -254,6 +256,8 @@ h2 {
     font-size: 24px;
     padding: 30px 50px 40px 60px;
     text-align: center;
+    padding-bottom: 500em;
+    margin-bottom: -500em;
 }
 
 .search {
